# pylatexdiff

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: new.tex  old.tex
src/pylatexdiff/: generate_header.py  latex_command.py  latex_parse.py  latex_parser.py  latexdiff.py  main.py
